--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@
     box-sizing: border-box;
 }
 @font-face {
+    font-family: "nunito";
+    src: url("Nunito-Light.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
     font-family: "linea-arrows-10";
     src: url("linea-arrows-10.ttf") format("truetype");
     font-weight: normal;
