--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 @font-face {
     font-family: "nunito";
     src: url("Nunito-Light.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
+
 @font-face {
     font-family: "linea-arrows-10";
     src: url("linea-arrows-10.ttf") format("truetype");
@@ -35,16 +37,17 @@
 
 .icon-arrows-circle-check:before {
     content: "\e007";
-  }
-  .icon-arrows-circle-remove:before {
+}
+
+.icon-arrows-circle-remove:before {
     content: "\e00e";
-  }
+}
 
 .clearfix::after {
     content: "";
     display: table;
     clear: both;
-} 
+}
 
 body {
     color: #555;
@@ -55,9 +58,17 @@ body {
     font-weight: 400;
 }
 
-.right { float: right; }
-.red { color: #FF5049 !important; }
-.red-focus:focus { border: 1px solid #FF5049 !important; }
+.right {
+    float: right;
+}
+
+.red {
+    color: #FF5049 !important;
+}
+
+.red-focus:focus {
+    border: 1px solid #FF5049 !important;
+}
 
 /**********************************************
 *** TOP PART
@@ -139,12 +150,12 @@ body {
     border-radius: 3px;
 }
 
-
 /**********************************************
 *** BOTTOM PART
 **********************************************/
 
 /***** FORM *****/
+
 .add {
     padding: 14px;
     border-bottom: 1px solid #e7e7e7;
@@ -182,8 +193,13 @@ body {
     transition: border 0.3s;
 }
 
-.add__description { width: 400px;}
-.add__value { width: 150px;}
+.add__description {
+    width: 400px;
+}
+
+.add__value {
+    width: 150px;
+}
 
 .add__btn {
     font-size: 35px;
@@ -197,7 +213,9 @@ body {
     margin-left: 10px;
 }
 
-.add__btn:active { transform: translateY(2px); }
+.add__btn:active {
+    transform: translateY(2px);
+}
 
 .add__type:focus,
 .add__description:focus,
@@ -206,9 +224,12 @@ body {
     border: 1px solid #28B9B5;
 }
 
-.add__btn:focus { outline: none; }
+.add__btn:focus {
+    outline: none;
+}
 
 /***** LISTS *****/
+
 .container {
     width: 1000px;
     margin: 60px auto;
@@ -232,24 +253,36 @@ h2 {
     margin-bottom: 15px;
 }
 
-.icome__title { color: #28B9B5; }
-.expenses__title { color: #FF5049; }
+.icome__title {
+    color: #28B9B5;
+}
+
+.expenses__title {
+    color: #FF5049;
+}
 
 .item {
     padding: 13px;
     border-bottom: 1px solid #e7e7e7;
 }
 
-.item:first-child { border-top: 1px solid #e7e7e7; }
-.item:nth-child(even) { background-color: #f7f7f7; }
+.item:first-child {
+    border-top: 1px solid #e7e7e7;
+}
+
+.item:nth-child(even) {
+    background-color: #f7f7f7;
+}
 
 .item__description {
     float: left;
+    text-transform: capitalize;
 }
 
 .item__value {
     float: left;
     transition: transform 0.3s;
+    text-transform: capitalize;
 }
 
 .item__percentage {
@@ -267,14 +300,15 @@ h2 {
 .income .item__value,
 .income .item__delete--btn {
     color: #28B9B5;
+    text-transform: capitalize;
 }
 
 .expenses .item__value,
 .expenses .item__percentage,
 .expenses .item__delete--btn {
     color: #FF5049;
+    text-transform: capitalize;
 }
-
 
 .item__delete {
     float: left;
@@ -291,21 +325,36 @@ h2 {
     display: none;
 }
 
-.item__delete--btn:focus { outline: none; }
-.item__delete--btn:active { transform: translateY(2px); }
+.item__delete--btn:focus {
+    outline: none;
+}
 
-.item:hover .item__delete--btn { display: block; }
-.item:hover .item__value { transform: translateX(-20px); }
-.item:hover .item__percentage { transform: translateX(-20px); }
+.item__delete--btn:active {
+    transform: translateY(2px);
+}
 
+.item:hover .item__delete--btn {
+    display: block;
+}
+
+.item:hover .item__value {
+    transform: translateX(-20px);
+}
+
+.item:hover .item__percentage {
+    transform: translateX(-20px);
+}
 
 .unpaid {
     background-color: #FFDAD9 !important;
     cursor: pointer;
     color: #FF5049;
-
 }
 
-.unpaid .item__percentage { box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1); }
-.unpaid:hover .item__description { font-weight: 900; }
+.unpaid .item__percentage {
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
+}
 
+.unpaid:hover .item__description {
+    font-weight: 900;
+}
